<resources>
    <string name="spinner_title">Audience</string>
    <string name="common_android_wear_notification_needs_update_text">requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">wont run unless you update the Android Wear app</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">wont work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by </string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">wont run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">wont run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">wont run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">wont run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Acquisitions">Acquisitions</string>
    <string name="AddAccount">Add account</string>
    <string name="All">All</string>
    <string name="AllTraffic">All Traffic</string>
    <string name="AppInfo">App Info</string>
    <string name="AppSpeed">App Speed</string>
    <string name="Audience">Audience</string>
    <string name="AuthAccount">Accounts</string>
    <string name="Authenticating">Authenticating</string>
    <string name="Fetching">Fetching…</string>
    <string name="Behavior">Behavior</string>
    <string name="Campaigns">Campaigns</string>
    <string name="ChooseMailApp">Choose a mail app</string>
    <string name="Comment">Comment</string>
    <string name="CommetSummary">Please leave us your comments!</string>
    <string name="ComparePeriod">Compare Period</string>
    <string name="ConnectionProblem">Connection problem.</string>
    <string name="Content">Content</string>
    <string name="CrashesAndExceptions">Crashes and Exceptions</string>
    <string name="CreatingReport">Creating report…</string>
    <string name="DataPeriod">Data Period</string>
    <string name="Demographics">Demographics</string>
    <string name="DevicesNetwork">Devices and Network</string>
    <string name="Direct">Direct</string>
    <string name="DirectTraffic">Direct Traffic</string>
    <string name="Done">Done</string>
    <string name="Ecommerce">Ecommerce</string>
    <string name="Engagement">Engagement</string>
    <string name="Events">Events</string>
    <string name="Favorite">Favourite</string>
    <string name="FromDate">From Date</string>
    <string name="Goals">Goals</string>
    <string name="Help">Help</string>
    <string name="IncludeToday">Include Today</string>
    <string name="Interests">Interests</string>
    <string name="InvalidDatePeriod">Date period invalid!</string>
    <string name="Login">Login</string>
    <string name="LoginError">An error occurred during sign in. Please try again later.</string>
    <string name="MalformedURLError">Malformed Url error!</string>
    <string name="Mobile">Mobile</string>
    <string name="More">More</string>
    <string name="NoData">No Data Available!</string>
    <string name="NoReportYet">Comming Soon!</string>
    <string name="Ok">Ok</string>
    <string name="Other">Other</string>
    <string name="OutOfMemoryError">Out of memory error!</string>
    <string name="Overview">Overview</string>
    <string name="Panel">Panel</string>
    <string name="Period">Period</string>
    <string name="ProfileError">The account that you are trying to add dont have any profile on Google analytics. Please select an account with a profile.</string>
    <string name="Profiles">Profiles</string>
    <string name="Realtime">Real-Time</string>
    <string name="Referral">Referral</string>
    <string name="ReferralTraffic">Referral Traffic</string>
    <string name="Refresh">Refresh</string>
    <string name="Retry">Retry</string>
    <string name="Screen">Screen</string>
    <string name="Screens">Screens</string>
    <string name="Search">Search</string>
    <string name="SearchTraffic">Search Traffic</string>
    <string name="SendEmail">Send email to us with your feedback</string>
    <string name="Share">Share</string>
    <string name="ShareMessage">Share this app to friends.</string>
    <string name="ShareSubject">gAnalytics</string>
    <string name="ShareText">Hi guys!  using https://market.android.com/details?id=com.e6bapps.ganalytics to check my google Analytics stats anywhere!</string>
    <string name="SiteContent">Site Content</string>
    <string name="SiteSearch">Site Search</string>
    <string name="Sites">Sites</string>
    <string name="Sort">Sort</string>
    <string name="Sources">Sources</string>
    <string name="System">System</string>
    <string name="Time">Time</string>
    <string name="Timezone">Timezone</string>
    <string name="TimezoneSummary">If you have timezone issues check this help.</string>
    <string name="ToDate">To Date</string>
    <string name="Traffic">Traffic</string>
    <string name="Users">Users</string>
    <string name="Visitors">Visitors</string>
    <string name="WhatNew">What is new</string>
    <string name="active_users">Active Users</string>
    <string name="active_users_on">active users on %s</string>
    <string name="active_users_on_app">active users on app</string>
    <string name="active_visitors">Active Visitors</string>
    <string name="active_visitors_on">active visitors on\n%s</string>
    <string name="active_visitors_on_site">active visitors on site</string>
    <string name="connection_problem">Connection problem. Check your internet connection and try again.</string>
    <string name="currency">Currency: %s</string>
    <string name="date_custom">Custom</string>
    <string name="date_four_weeks">4 weeks</string>
    <string name="date_one_month">1 month</string>
    <string name="date_one_week">1 week</string>
    <string name="date_one_year">1 year</string>
    <string name="date_six_months">6 months</string>
    <string name="date_three_weeks">3 weeks</string>
    <string name="date_today">Today</string>
    <string name="date_two_months">2 months</string>
    <string name="date_two_weeks">2 weeks</string>
    <string name="date_two_years">2 years</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="disclaimer_checkbox">Do not show me this again</string>
    <string name="disclaimer_message">With the compare period option enabled the report will take long to load. So, if you have a slow connection we recommend you to disable this option.</string>
    <string name="ga_activeUsers">Active Users</string>
    <string name="ga_activeVisitors">Active Visitors</string>
    <string name="ga_adDestinationUrl">Destination URL</string>
    <string name="ga_adMatchedQuery">Matched Search Query</string>
    <string name="ga_appInstallerId">App Installer ID</string>
    <string name="ga_appName">App name</string>
    <string name="ga_app_version">App version</string>
    <string name="ga_avgScreenviewDuration">Avg. Time on Screen</string>
    <string name="ga_avgSessionDuration">Avg. Session Duration</string>
    <string name="ga_avgTimeOnSite">Avg time on site</string>
    <string name="ga_avgUserTimingValue">Avg. User Timing (sec)</string>
    <string name="ga_browser">Browser</string>
    <string name="ga_browserVersion">Browser Version</string>
    <string name="ga_campaign">Campaigns</string>
    <string name="aboutus_text1">Vmoksha Technologies Private Limited is an offshore based, IT outsourcing services company headquartered in Bangalore, India. Since its inception in May 2001, Vmoksha has adopted a strategy of rapid organic as well as inorganic growth.\n</string>
    <string name="aboutus_text2">Vmoksha"'"s growth has been realized through a strong focus on offshore IT outsourcing services and adapting its Flexible Business Model for customers around the globe. The business strategy has led to acquisitions of a number of large, prestigious customers including 3M Healthcare, Edwards, Christie"'"s, NTUC Fairprice, S1 Corporation (now part of ACI Worldwide), Pickfords, Toyota, Gallo Wineries, CPA Global, UCB, IBM, Cisco, Wincor Nixdorf, Nextance, Unilever-India etc.\n</string>
    <string name="aboutus_text3">Vmoksha has operations in US, Europe and Asia Pacific currently with offices in Newport Beach, London and Singapore. This has enabled us to provide a high level of customer satisfaction and deliver cost-effective solutions.\n</string>
    <string name="aboutus_text4">Vmoksha"'"s management and delivery team has the industry"'"s most experienced team in executing large projects and running offshore development centers for large corporations. The team has a successful track record in delivering multiple projects to global customers in the following domain areas:\n</string>
    <string name="Manufacturing">Manufacturing &amp; Food Processing</string>
    <string name="Legal">Legal &amp; Intellectual Property</string>
    <string name="Retail">Retail &amp; Distribution</string>
    <string name="healthcare">Healthcare &amp; Life Sciences</string>
    <string name="shipping">Shipping &amp; Transportation</string>
    <string name="independent">Independent Software Vendors</string>
</resources>