<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/source_card_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp">

            <!--  <me.biubiubiu.justifytext.library.JustifyTextView
              android:id="@+id/aboutus_text1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/aboutus_text1"
              android:textColor="@color/black"

              android:textSize="12sp" />-->
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/aboutus_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutus_text1"
                android:textColor="@color/black"

                android:textSize="12sp" />
        </LinearLayout>

        <!--  <View
              android:layout_width="match_parent"
              android:layout_height="10dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="14dp">

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/aboutus_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutus_text2"
                android:textColor="@color/black"

                android:textSize="12sp" />

            <!-- <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                 android:layout_gravity="center_vertical|right|left"
                   android:text="@string/aboutus_text2"
                   android:textColor="@color/black"
                   android:textSize="12sp" />-->
        </LinearLayout>

        <!--<View

            android:layout_width="match_parent"
            android:layout_height="10dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp">

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutus_text3"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- <View

             android:layout_width="match_parent"
             android:layout_height="10dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Expertise"
                android:textColor="@color/background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp">

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutus_text4"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--  <View

              android:layout_width="match_parent"
              android:layout_height="10dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Financial Services"
                android:textColor="@color/black"

                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Manufacturing"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Legal"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Retail"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/healthcare"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shipping"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u25CF "
                android:textColor="@color/background_color"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/independent"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>
</android.support.v7.widget.CardView>